[package]
name = "kvs"
version = "0.1.1"
authors = ["Darren <qiwei9743@gmail.com>"]
edition = "2018"
description = "A simple key/value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
structopt = "0.3.4"
serde = "1.0.102"
serde_json = "1.0.41"
tempfile = "3.1.0"
walkdir = "2.2.9"

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false
doctest = false